Refactor script.js to update HTML elements' styles

--- a/setup/index.html
+++ b/setup/index.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    asdasd
+    
 </head>
 
 <body>
-    <script src="script.js">sadasd</script>
+    <div id="div-id"> Mr Flask</div>
+    <div class="div-class"> Mr Flask</div>
+    <div class="div-class"> Mr Flask</div>
+    <div class="div-class"> Mr Flask</div>
+    <script src="script.js"></script>
 </body>
 
 </html>
