--- a/setup/index.html
+++ b/setup/index.html
@@ -13,7 +13,7 @@
     <div class="div-class"> Mr Flask</div>
     <div class="div-class"> Mr Flask</div>
     <div class="div-class"> Mr Flask</div>
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
 </body>
 
 </html>
