Refactor script.js to update HTML elements' styles and add button click event listener

--- a/setup/index.html
+++ b/setup/index.html
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-    <div id="div-id"> Mr Flask</div>
-    <div class="div-class"> Mr Flask</div>
-    <div class="div-class"> Mr Flask</div>
-    <div class="div-class"> Mr Flask</div>
+    <button data-btn>click me!</button>
     <script defer src="script.js"></script>
 </body>
 
