form.addEventListener('submit', (e) => {   e.preventDefault();   console.log('form submitted'); });

--- a/setup/index.html
+++ b/setup/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <button data-btn>click me!</button>
+    <form data-form>
+        <a href="https://www.google.com" data-link>google</a>
+        <input type="text" data-input>
+        <button data-btn>submit</button>
+    </form>
     <script defer src="script.js"></script>
 </body>
 
