Refactor index.html and script.js to update HTML elements' styles and add button click event listeners

--- a/setup/index.html
+++ b/setup/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
+    <title>Test</title>
 </head>
-
 <body>
-    <form data-form>
-        <a href="https://www.google.com" data-link>google</a>
-        <input type="text" data-input>
-        <button data-btn>submit</button>
-    </form>
-    <script defer src="script.js"></script>
+    <button data-clicks="0">1</button>
+    <button data-clicks="0">2</button>
+    <button data-clicks="0">3</button>
+    <script src="script.js"></script>
 </body>
-
 </html>
