Refactor index.html and script.js to update HTML structure, add form for adding tasks, and modify CSS styles

--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Document</title>
 </head>
 
 <body>
     <div id="list">
-
+        asdas
     </div>
-    
+
     <form id="new-item-form">
         <label for="item-input">New Task:</label>
         <input type="text" id="task">
