--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -11,12 +11,14 @@
 
 <body>
     <div id="list">
-        asdas
+        <div class="list-item">
+            wash dishes
+        </div>
     </div>
 
     <form id="new-item-form">
         <label for="item-input">New Task:</label>
-        <input type="text" id="task">
+        <input type="text" id="item-input">
         <button type="submit">Add Task</button>
     </form>
 
