--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -1,27 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-    <title>Document</title>
+  <title>Simple List</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <div id="list">
-        <div class="list-item">
-            wash dishes
-        </div>
-    </div>
+  <div id="list">
 
-    <form id="new-item-form">
-        <label for="item-input">New Task:</label>
-        <input type="text" id="item-input">
-        <button type="submit">Add Task</button>
-    </form>
-
+  </div>
+  
+  <form id="new-item-form">
+    <label for="item-input">New Task</label>
+    <input type="text" id="item-input">
+    <button type="submit">Add Task</button>
+  </form>
 </body>
-
 </html>
