--- a/0x01-toDoList/index.html
+++ b/0x01-toDoList/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Simple List</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
+
 <body>
   <div id="list">
 
   </div>
-  
+
   <form id="new-item-form">
-    <label for="item-input">New Task</label>
+    <label for="item-input">New Item</label>
     <input type="text" id="item-input">
-    <button type="submit">Add Task</button>
+    <button type="submit">Add Item</button>
   </form>
 </body>
+
 </html>
