--- a/0x04-FormValidation/index.html
+++ b/0x04-FormValidation/index.html
@@ -14,10 +14,11 @@
         }
     </style>
     <!-- TODO: Add the script tag -->
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-    <form action="thank-you.html" id="form">
+    <form action="thank-U.html" id="form">
         <div class="errors">
             <h3 class="error-title">Error</h3>
             <ul class="errors-list">
