--- a/0x00-setup/index.html
+++ b/0x00-setup/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="button">Click Me</button>
+    <script src="script.js" defer></script>
+    <button>Click Me</button>
 </body>
 </html>
