Refactor index.html and script.js to add multiple buttons and handle click events

--- a/0x00-setup/index.html
+++ b/0x00-setup/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <script src="script.js" defer></script>
-    <button>Click Me</button>
+    <button id = '1'>Click Me</button>
+    <button id = '2'>Click Me</button>
+    <button id = '3'>Click Me</button>
+    <button id = '4'>Click Me</button>
 </body>
 </html>
