Refactor index.html and script.js to add multiple buttons and handle click events

--- a/0x00-setup/index.html
+++ b/0x00-setup/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script src="script.js" defer></script>
-    <button id = '1'>Click Me</button>
-    <button id = '2'>Click Me</button>
-    <button id = '3'>Click Me</button>
-    <button id = '4'>Click Me</button>
+    <div>
+        <button id='1'>Click 1</button>
+        <button id='2' style="margin-bottom: 4px;">Click 2</button>
+    </div>
+    <div>
+        <button id='3'>Click 3</button>
+        <button id='4' >Click 4</button>
+    </div>
 </body>
+
 </html>
