--- a/0x00-setup/index.html
+++ b/0x00-setup/index.html
@@ -10,12 +10,12 @@
 <body>
     <script src="script.js" defer></script>
     <div>
-        <button id='1'>Click 1</button>
-        <button id='2' style="margin-bottom: 4px;">Click 2</button>
+        <button id='btn1'>Click 1</button>
+        <button id='btn2' style="margin-bottom: 4px;">Click 2</button>
     </div>
     <div>
-        <button id='3'>Click 3</button>
-        <button id='4' >Click 4</button>
+        <button id='btn3'>Click 3</button>
+        <button id='btn4' style="margin-bottom: 4px;">Click 4</button>
     </div>
 </body>
 
