--- a/0x05-Advanced-TODO/index.html
+++ b/0x05-Advanced-TODO/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Advanced Todo List</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="scripts.js" defer></script>
 </head>
 <body>
   <ul id="list">
