Refactor index.html and script.js to fix file references and add basic structure for an advanced todo list

--- a/0x05-Advanced-TODO/index.html
+++ b/0x05-Advanced-TODO/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Advanced Todo List</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="scripts.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 
 <body>
