Refactor index.html and script.js to add dark mode functionality

--- a/0x05-Advanced-TODO/index.html
+++ b/0x05-Advanced-TODO/index.html
@@ -7,7 +7,7 @@
   <script src="script.js" defer></script>
 </head>
 
-<body>
+<body class="dark">
   <ul id="list">
 
   </ul>
@@ -27,6 +27,7 @@
       <button data-button-delete>Delete</button>
     </li>
   </template>
+  <button mb-5 id="darkBtn" data-button-dark-toggle>Dark ON/OFF</button>
 </body>
 
 </html>
