--- a/0x05-Advanced-TODO/index.html
+++ b/0x05-Advanced-TODO/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
   <title>Advanced Todo List</title>
@@ -22,7 +22,7 @@
     <li class="list-item">
       <label class="list-item-label">
         <input type="checkbox" data-list-item-checkbox>
-        <span data-list-item-text></span>
+        <span data-list-item-text=hello></span>
       </label>
       <button data-button-delete>Delete</button>
     </li>
