Refactor index.html and script.js to fix missing newline at end of file

--- a/0x05-Advanced-TODO/index.html
+++ b/0x05-Advanced-TODO/index.html
@@ -22,7 +22,7 @@
     <li class="list-item">
       <label class="list-item-label">
         <input type="checkbox" data-list-item-checkbox>
-        <span data-list-item-text=hello></span>
+        <span data-list-item-text></span>
       </label>
       <button data-button-delete>Delete</button>
     </li>
