--- a/0x05-Advanced-TODO/index.html
+++ b/0x05-Advanced-TODO/index.html
@@ -27,7 +27,7 @@
       <button data-button-delete>Delete</button>
     </li>
   </template>
-  <button mb-5 id="darkBtn" data-button-dark-toggle>Dark ON/OFF</button>
+  <button id="darkBtn" data-button-dark-toggle>Dark ON/OFF</button>
 </body>
 
 </html>
