--- a/0x05-Advanced-TODO/index.html
+++ b/0x05-Advanced-TODO/index.html
@@ -19,7 +19,7 @@
   </form>
 
   <template id="list-item-template">
-    <li class="list-item">
+    <li class="list-item" data-id>
       <label class="list-item-label">
         <input type="checkbox" data-list-item-checkbox>
         <span data-list-item-text></span>
