--- a/0x06-ExpandColapse/index.html
+++ b/0x06-ExpandColapse/index.html
@@ -4,14 +4,15 @@
 <head>
     <title>Expand/Collapse</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
     <div class="card">
         <div class="card-header">
             <span>Title 1</span>
-            <button class="expand-button">Expand</button>
-        </div>
+            <button class="expand-button" data-id="btn1">Expand</button>
+        </div>"
         <div class="card-body">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id voluptate dolorem reprehenderit nisi doloribus?
             Dolor officiis praesentium aperiam dolorem sequi obcaecati iste corporis voluptatum accusamus.
@@ -20,7 +21,7 @@
     <div class="card">
         <div class="card-header">
             <span>Title 2</span>
-            <button class="expand-button">Collapse</button>
+            <button class="expand-button" data-id="btn2">Collapse</button>
         </div>
         <div class="card-body show">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id voluptate dolorem reprehenderit nisi doloribus?
@@ -30,7 +31,7 @@
     <div class="card">
         <div class="card-header">
             <span>Title 3</span>
-            <button class="expand-button">Expand</button>
+            <button class="expand-button" data-id="btn3">Expand</button>
         </div>
         <div class="card-body">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id voluptate dolorem reprehenderit nisi doloribus?
@@ -40,7 +41,7 @@
     <div class="card">
         <div class="card-header">
             <span>Title 4</span>
-            <button class="expand-button">Expand</button>
+            <button class="expand-button" data-id="btn">Expand</button>
         </div>
         <div class="card-body">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id voluptate dolorem reprehenderit nisi doloribus?
