Refactor index.html to fix expand/collapse functionality and missing newline at end of file

--- a/0x06-ExpandColapse/index.html
+++ b/0x06-ExpandColapse/index.html
@@ -12,7 +12,7 @@
         <div class="card-header">
             <span>Title 1</span>
             <button class="expand-button" data-id="btn1">Expand</button>
-        </div>"
+        </div>
         <div class="card-body">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id voluptate dolorem reprehenderit nisi doloribus?
             Dolor officiis praesentium aperiam dolorem sequi obcaecati iste corporis voluptatum accusamus.
