--- a/0x00-setup/index.html
+++ b/0x00-setup/index.html
@@ -1,46 +1,14 @@
-<style>
-  :root {
-    --button-bg-color: rgb(250, 216, 20);
-    --button-bg-hover: rgb(230, 200, 20);
-    --button-text-color: white;
-    --button-height: 30px;
-    --button-padding: 10px;
-    --button-font-size: 10px;
-}
+<!DOCTYPE html>
+<html lang="en">
 
-.amazon-button {
-    background-color: var(--button-bg-color);
-    color: var(--button-text-color);
-    border: none;
-    width: 150px;
-    height: var(--button-height);
-    border-radius: 25px;
-    font-size: var(--button-font-size);
-    padding: var(--button-padding);
-    cursor: pointer;
-    transition: background-color 0.3s;
-    font-weight: bold;
-}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 
-/* Hover effect */
-.amazon-button:hover {
-    background-color: var(--button-bg-hover);
-}
+<body>
 
-/* Focus styles for accessibility */
-.amazon-button:focus {
-    outline: 2px solid rgb(50, 50, 50); /* Ensure visibility on focus */
-}
+</body>
 
-/* Responsive adjustments */
-@media (max-width: 600px) {
-    .amazon-button {
-        width: 100%; /* Full width on smaller screens */
-        font-size: 12px; /* Slightly larger text */
-    }
-}
-
-</style>
-<button class="amazon-button">
-  Add to Cart
-</button>
+</html>
